# tsunami-prediction-system

./: .gitignore  .gitignore.txt  LICENSE  README.md  encoder_country_volcanic.pkl  encoder_type_volcanic.pkl  ohe_tectonic.pkl  ohe_volcanic.pkl  pyproject.toml  requirements.txt  scaler_tectonic.save  scaler_volcanic.save
.gitignore/: .gitignore.txt
dataset/processed/: volcanic_cleaned.csv
dataset/raw/: raw_tectonic_global.csv
models/: encoder_tec.joblib  regression_meta_volcanic.joblib  scaler_tectonic.joblib  scaler_volcanic.joblib  stacking_volcanic.joblib
output/: valid_earthquake_data.xlsx  valid_earthquake_vertical_data.xlsx
static/: index.html
tsunami-prediction/: app.py  best_stacking_model_volcanic.pkl  encoder_country_tectonic.pkl  feature_cols_tectonic.pkl  feature_cols_volcanic.pkl  main.py
tsunami-prediction-system.git/: config
tsunami-prediction-system.git/info/: refs
tsunami-prediction-system.git/objects/info/: commit-graph  packs
tsunami-prediction-system.git/objects/pack/: pack-21fcac4e069a214ac2fa6d167bd5df62fa567014.bitmap
tsunami-prediction-system.git/tsunami-prediction-system.git/: packed-refs
tsunami-prediction/dataset/processed/: tectonic_biner.csv  tectonic_cleaned.csv  volcanic_biner.csv
tsunami-prediction/dataset/raw/: raw_volcanic_global.csv
tsunami-prediction/models/: encoder_volcanic.joblib  regression_meta_tectonic.joblib
tsunami-prediction/output/: raw_earthquake_data.xlsx
tsunami-prediction/pred_type/: types.py
tsunami-prediction/src/: predict.py
(+3 files in other folders)
