[project]
name = "tsunami-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "folium>=0.19.6",
    "joblib>=1.5.1",
    "pandas>=2.2.3",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow",
    "uvicorn>=0.34.2",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
